# RatUpdater

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pre-release.yml  tagged-release.yml  test.yml
src/: api.rs  download.rs  fs.rs  lib.rs  main.rs  options.rs
tests/: tests.rs
