[package]
name = "rat-updater"
version = "0.3.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2018"

[dependencies]
zip = "0.5.9"
indicatif = "0.15.0"
ureq = { version = "2.1.0", features = ["json"] }
anyhow = "1.0.36"
remove_dir_all = "0.7.0"
tempfile = "3.1.0"
serde_json = "1.0.64"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
serial_test = "0.5.1"

[profile.release]
lto = true
opt-level = 'z'
